kubernetes/hub-node-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-node-container-pod
  namespace: kamran
spec:
  containers:
  - name: node-ctr
    image: kamzaidi/nodejs-todo-app
    ports:
    - containerPort: 8000
