kubernetes/multi-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-multi-container-pod
spec:
  containers:
  - name: container-1
    image: nginx:latest
    ports:
    - containerPort: 80
  - name: container-2
    image: redis:latest
    ports:
    - containerPort: 6379
