kubernetes/my-nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: kamran
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:  
      labels:
        app: node-app
    spec:
      containers:
      - name: node-js-ctr
        image: kamzaidi/nodejs-todo-app 
        ports:
        - containerPort: 8000
