kubernetes/pods-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: reddis-ctr
  namespace: kamran
spec:
  containers:
  - name: redis
    image: hello-world
