kubernetes/pods-2.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: nginx-ctr
  namespace: django-todo-appln 
spec: 
  containers: 
  - name: nginx 
    image: nginx:1.14.2 
    ports: 
    - containerPort: 80
