kubernetes/pods-3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kamran-ctr
  namespace: kamran
spec:
  containers:
  - name: kamranimage
    image: kamzaidi/pythonnewimage
